# pano-projector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: .clang-tidy  CMakeLists.txt  Command.cpp  Command.h  CropRect.h  EncoderOptions.h  FaceCommand.cpp  FaceCommand.h  FaceDiagramCommand.cpp  FaceDiagramCommand.h  FaceInfo.cpp  FaceInfo.h  InputImage.cpp  InputImage.h  InputImageFactory.cpp  InputImageFactory.h  InputJpeg.cpp  InputJpeg.h  IntegerCropRect.cpp  IntegerCropRect.h  MemoryBudget.cpp  MemoryBudget.h  Metadata.h  OutputBase.cpp  OutputBase.h  OutputImage.cpp  OutputImage.h  OutputPyramid.cpp  OutputPyramid.h  OutputTiler.cpp  OutputTiler.h  PyramidCommand.cpp  PyramidCommand.h  extractFace.cpp  extractFace.h  main.cpp
tests/: CMakeLists.txt  integration-tests.py
tests/data/: README.md
